--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -38,6 +38,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+					 <name>backendcontainerregistry.azurecr.io/${project.artifactId}</name>
+					</image>
+					<layers>
+					 <enabled>true</enabled>
+					 <includeLayerTools>true</includeLayerTools>
+					</layers>
+				   </configuration>
 			</plugin>
 		</plugins>
 	</build>
