--- a/front-end/azure-pipelines.yml
+++ b/front-end/azure-pipelines.yml
@@ -2,6 +2,9 @@ pool:
   name: Azure Pipelines
   demands: npm
 
+variables:
+  deployment_token: '1e146da2c1c390037e569767f22e6af83a3bd48b09204c7c5e38e5874d1d406c1-62d25d7e-1412-45e5-a27d-b79af53d0a08010103834'
+
 steps:
 - task: Npm@1
   displayName: 'npm install'
@@ -13,12 +16,12 @@ steps:
   workingDirectory: 'front-end/'
   displayName: 'running tests'
 
-- bash: 'npm run build'
-  workingDirectory: 'front-end/'
-  displayName: 'running build'
-
-- task: ArchiveFiles@2
-  displayName: 'Archive $(Build.BinariesDirectory)'
-
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
+- task: AzureStaticWebApp@0
+  displayName: 'Deploy to Static Web App'
+  inputs:
+    app_location: 'front-end'
+    output_location: build
+    skip_app_build: false
+    skip_api_build: false
+    verbose: false
+    azure_static_web_apps_api_token: '$(deployment_token)'
