--- a/infrasctructure-cloudFormation/package.json
+++ b/infrasctructure-cloudFormation/package.json
@@ -11,18 +11,28 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "aws-cdk": "2.24.1",
-    "ts-node": "^10.7.0",
-    "typescript": "~3.9.7"
+    "@aws-cdk/assert": "2.28.1",
+    "@types/jest": "^28.1.3",
+    "@types/node": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "aws-cdk": "2.28.1",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
+    "typescript": "~4.7.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.24.1",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.28.1",
+    "constructs": "^10.1.42",
     "source-map-support": "^0.5.21"
   }
 }
